--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -1,4 +1,42 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1> About Flask Blog</h1>
+    <div class="content-section">
+        <form action="" method="POST">
+            {{ form.hidden_tag() }}
+            <filedset class="form-group ">
+                <legend class="border-bottom mb-4">New Post</legend>
+                <div class="form-group">
+                    {{ form.title.label(class="form-control-lable") }}
+
+                    {% if form.title.errors %}
+                        {{ form.title(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in title.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.title(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    {{ form.content.label(class="form-control-lable") }}
+                    {% if form.content.errors %}
+                        {{ form.content(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.content.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.content(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </filedset>
+            <div class="form-group mt-3">
+                {{ form.submit(class='btn btn-outline-info') }}
+            </div>
+        </form>
+    </div>
 {% endblock content %}
