--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    {% for post in posts %}
+    {% for post in posts.items %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ url_for('static',filename='profile_pics/' + post.author
             .image_file) }}">
@@ -13,5 +13,12 @@
             <p class="article-content">{{ post.content }}</p>
           </div>
         </article>
+    {% endfor %}
+    {% for page_num in posts.iter_pages() %}
+        {% if page_num %}
+            <a  class="btn btn-outline-info mb-1" href="{{ url_for('home',page=page_num) }}">{{ page_num }}</a>
+        {% else %}
+            ...
+        {% endif %}
     {% endfor %}
 {% endblock content %}
